--- a/advertisement-on-file-created/package.json
+++ b/advertisement-on-file-created/package.json
@@ -3,7 +3,6 @@
         "request": "^2.88",
         "request-promise": "^4.0",
         "file-type": "^14.4",
-        "got": "^11.1",
-        "uuid": "^8.0"
+        "got": "^11.1"
     }
 }
